--- a/flask_project/requirements.txt
+++ b/flask_project/requirements.txt
@@ -9,3 +9,5 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 Werkzeug==1.0.1
 WTForms==2.3.1
+spacy==2.2.4
+en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.2.5/en_core_web_lg-2.2.5.tar.gz
