--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,42 @@
-flask_project/requirements.txt
+beautifulsoup4==4.9.1
+blis==0.4.1
+catalogue==1.0.0
+certifi==2020.4.5.1
+chardet==3.0.4
+click==7.1.2
+cymem==2.0.3
+dnspython==1.16.0
+email-validator==1.1.1
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.5/en_core_web_md-2.2.5.tar.gz
+Flask==1.1.2
+Flask-WTF==0.14.3
+get==2019.4.13
+gunicorn==20.0.4
+html5lib==1.0.1
+idna==2.9
+importlib-metadata==1.6.0
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lxml==4.5.1
+MarkupSafe==1.1.1
+murmurhash==1.0.2
+numpy==1.18.4
+plac==1.1.3
+post==2019.4.13
+preshed==3.0.2
+public==2019.4.13
+query-string==2019.4.13
+request==2019.4.13
+requests==2.23.0
+six==1.15.0
+soupsieve==2.0.1
+spacy==2.2.4
+srsly==1.0.2
+thinc==7.4.0
+tqdm==4.46.0
+urllib3==1.25.9
+wasabi==0.6.0
+webencodings==0.5.1
+Werkzeug==1.0.1
+WTForms==2.3.1
+zipp==3.1.0
