--- a/flask_project/requirements.txt
+++ b/flask_project/requirements.txt
@@ -7,7 +7,7 @@ click==7.1.2
 cymem==2.0.3
 dnspython==1.16.0
 email-validator==1.1.1
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.2.5/en_core_web_md-2.2.5.tar.gz
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
 Flask==1.1.2
 Flask-WTF==0.14.3
 get==2019.4.13
